<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/text_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationTitle"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_address_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_address_title"
            android:text="@string/loading"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/text_lat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitudeTitle"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_lat_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_lat_title"
            android:text="@string/loading"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/text_lng_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitudeTitle"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_lng_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_lng_title"
            android:text="@string/loading"
            android:textSize="16sp" />
    </RelativeLayout>

    <include layout="@layout/activity_maps" />
</LinearLayout>